added resume and adjusted about me page

--- a/index.html
+++ b/index.html
@@ -10,9 +10,14 @@
   <header>
     <h1>Luis Hung</h1>
     <nav>
-      <button data-page="about">About Me</button>
-      <button data-page="works">My Works</button>
-    </nav>
+  <button data-page="about">About Me</button>
+  <button data-page="works">My Works</button>
+
+  <a href="files/Resume.pdf" target="_blank" class="resume-btn">
+    Resume
+  </a>
+</nav>
+
   </header>
 
   <main>
@@ -24,7 +29,7 @@
     <li>Interested in front-end, creative coding, and visual design</li>
     <li>Interested in video games, UI/UX, and digital storytelling</li>
     <li>Interested in music and video creation</li>
-    <li>Tools: HTML, CSS, JavaScript, React, C#, Adobe Softwares</li>
+    <li>Tools: Java, HTML, CSS, JavaScript, React, C#, Adobe Softwares, Microsoft Office</li>
   </ul>
 </section>
 
